--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@
 $primary-color: #ff6060;
 $secondary-color: #ffffff;
 $tertiary-color: #f6f6f6;
+$dark-color: #000;
 
 // Breakpoints
 $screen-tablet: 768px;
