--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -8,10 +8,12 @@
     font-family:"Montserra", sans-serif;
     margin: 0;
     padding: 0;
-    list-style: none;
-    color: $primary-color;
+    list-style: none;    
 }
-a {
-   
+a {   
     text-decoration: none;
+    color: $dark-color;
+}
+h2 {
+    color: $primary-color;
 }
