--- a/src/pages/apart/apart.scss
+++ b/src/pages/apart/apart.scss
@@ -33,7 +33,7 @@
         flex-direction: column;
         gap: 10px;
         p {
-          font-size: 14px;
+          font-size: 14px;          
         }
       }
 
@@ -62,9 +62,10 @@
         }
 
         p {
-          width: 80px;
+          width: 50px;
           text-align: end;
           font-size: 12px;
+          color: $primary-color
         }
       }
     }
@@ -80,8 +81,7 @@
   // *** Responsive *** //
 
   @include tabletMinBreakPoint {
-    width: $screen-tablet;
-    // position: relative;
+    width: $screen-tablet;   
     margin: auto;
     margin-top: -30px;
     gap: 25px;
@@ -104,7 +104,7 @@
           width: 100%;
 
           p {
-            font-size: 18px;
+            font-size: 18px;           
           }
         }
 
@@ -126,6 +126,7 @@
           p {
             font-size: 18px;
             line-height: 30px;
+            width: 80px;
           }
 
           img {
