--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -18,6 +18,10 @@
   p {
     color: white;
     padding-top: 34px;
+    font-size: 12px;
+    width: 30%;
+    text-align: center;
+    font-weight: 400;
   }
 
   // *** Responsive *** //
@@ -28,12 +32,14 @@
 
     p {
       font-size: 24px;
+      width: auto;
     }
   }
 
   @include laptopMinBreakPoint {
     width: $screen-laptop;
-    padding: 2rem
+    padding: 2rem;
+    font-weight: 500;
   }
 
   @include largeMinBreakPoint {
