--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -3,7 +3,7 @@
 
 .about {
   width: 100%;
-  margin: auto;
+  margin-bottom: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
