--- a/src/pages/notFound/notFound.scss
+++ b/src/pages/notFound/notFound.scss
@@ -8,14 +8,70 @@
     // *** Responsive ***//
 
     @include tabletMinBreakPoint {
-    max-width: $screen-tablet;
+        max-width: $screen-tablet;
     }
 
     @include laptopMinBreakPoint {
-    max-width: $screen-laptop;
+        max-width: $screen-laptop;
     }
-    
+
     @include largeMinBreakPoint {
-    max-width: $screen-large;
+        max-width: $screen-large;
+    }
+
+    &__body {
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        &__message {
+            text-align: center;
+
+            &_number {
+                font-size: 96px;
+                font-weight: 700;
+                margin: 215px 0 11px 0;
+            }
+
+            &_back {
+                margin: 133px 0 235px 0;
+                font-weight: 500;
+                font-size: 14px;
+
+                a {
+                    text-decoration: underline;
+                }
+            }
+
+            &_oups {
+                text-align: center;
+                font-size: 18px;
+                font-weight: 500;
+            }
+
+            // *** Responsive *** //
+
+            @include tabletMinBreakPoint {
+
+                &_number {
+                    font-size: 288px;
+                }
+
+                &_back {
+                    font-size: 18px;
+                }
+
+                &_oups {
+                    font-size: 36px;
+
+                    br {
+                        display: none;
+                    }
+                }
+            }
+
+
+        }
     }
 }
