--- a/src/components/collapse/collapse.scss
+++ b/src/components/collapse/collapse.scss
@@ -45,15 +45,12 @@
     background-color: $tertiary-color;
     border-radius: 0 0 5px 5px;
     overflow: hidden;
-    transition: max-height 0.5s ease-out;
+    transition: max-height 0.75s ease-out;
     max-height: 0; 
-    opacity: 0;
-    visibility: hidden;
 
     &.open {
       max-height: 500px;
-      opacity: 1;
-      visibility: visible;
+      transition: max-height 0.5s ease-in;
     }
 
     &_text {
