--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -13,8 +13,15 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    filter: brightness(65%);
     transition: 0.7s;
+  }
+  &::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,1));
+    opacity: 0.7; 
+    pointer-events: none; 
   }
 
   h2 {
@@ -34,11 +41,7 @@
   @include laptopMinBreakPoint {
     &:hover {
       box-shadow: 0px 0px 0px 2px #a0a0a0, inset 0px 10px 27px -8px #141414,
-        inset 0px -10px 27px -8px #a31925, 5px 5px 15px -2px rgba(0, 0, 0, 0);
-    }
-
-    img:hover {
-      filter: brightness(100%);
-    }
+        inset 0px -10px 27px -8px #a31925, 5px 5px 15px -2px rgba(0, 0, 0, 0);     
+    }   
   }
 }
